<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JugarFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnCreatePartida"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:background="#8AAA8C"
            android:text="@string/empezarJuego"
            android:textColor="#4A148C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/btnPreviousPartida"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:background="#8AAA8C"
            android:text="@string/previousGames"
            android:textColor="#4A148C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/btnRanking"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:background="#8AAA8C"
            android:text="@string/ranking"
            android:textColor="#4A148C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>